# rrss

./: Cargo.toml  README.md
rrss-cli/: Cargo.toml
rrss-cli/src/: cli.rs  main.rs
rrss-core/: Cargo.toml
rrss-core/src/: cache.rs  config.rs  feed_manager.rs  filter.rs  lib.rs  models.rs  sorter.rs
rrss-core/src/model/: adapters.rs  filter.rs  mod.rs  models.rs  sorter.rs
rrss-tui/: Cargo.toml
rrss-tui/src/: app.rs  keymaps.rs  main.rs  theme.rs
rrss-tui/src/views/: detailed_item.rs  feeds.rs  help.rs  items.rs  links.rs  mod.rs  popup.rs  prompt.rs  quit.rs  tags.rs
rrss-tui/src/widgets/: mod.rs  scrollable_paragraph.rs  tui_input.rs
src/: cache.rs  cli.rs  config.rs  feed_manager.rs  globals.rs  main.rs
src/model/: filter.rs  mod.rs  models.rs  sorter.rs
src/tui/: app.rs  keymaps.rs  mod.rs  theme.rs
src/tui/keymaps/: mod.rs
src/tui/views/: detailed_item.rs  feeds.rs  help.rs  items.rs  links.rs  mod.rs  notification.rs  popup.rs  prompt.rs  quit.rs  status.rs  tags.rs  view.rs
src/tui/widgets/: mod.rs  multiline_paragraph.rs  scrollable_paragraph.rs  stateful_table.rs  tui_input.rs
