[package]
name = "rrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-semaphore = "1.2.0"
async-std = "1.13.0"
bincode = "1.3.3"
chrono = "0.4.38"
chrono-humanize = "0.2.3"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
feed-rs = "2.0.0"
futures = "0.3.30"
html2text = "0.12.5"
itertools = "0.13.0"
lazy_static = "1.4.0"
mime = "0.3.17"
open = "5.1.4"
ratatui = { version = "0.28.1", features = ["crossterm"] }
ratatui_view = { path = "../ratatui_view" }
regex = "1.10.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["chrono"] }
toml = "0.8.12"
tui-input = "0.8.0"
ureq = "2.10.1"
