[package]
name = "rrss-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-semaphore = "1.2.0"
async-std = "1.13.0"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.38"
chrono-humanize = "0.2.3"
directories = "6.0.0"
feed-rs = "2.1.1"
futures = "0.3.30"
html2text = "0.14.2"
itertools = "0.14.0"
lazy_static = "1.4.0"
opml = "1.1.6"
ratatui = { version = "0.29.0", features = ["crossterm"] }
ratatui-helpers = { git = "https://github.com/diegostafa/ratatui-helpers.git" }
regex = "1.10.5"
serde = { version = "1.0.199", features = ["derive"] }
ureq = "3.0.10"
